# dcbase

./: .gitignore  CMakeLists.txt  IP.txt  main.cpp
toolchains/: dreamcast.cmake
